# xpc-suite

./: LICENSE  README.md  pack
xpc_basic/: Makefile.am  README  STATUS  TODO  VERSION  bootstrap  configure.ac
xpc_basic/contrib/: Makefile.am  README  xpc-version-info.ac
xpc_basic/contrib/GPL/: gpl-code-insert.txt
xpc_basic/contrib/OSS/: CiscoConfigBackup.sh  OCTread_FIG.m  lstree.tar.Z
xpc_basic/contrib/automake/: am_dox_include.am  configure-os-arch.ac  make-install-notice.txt  xpc-config.h
xpc_basic/contrib/etc/: DIR_COLORS  input.rc
xpc_basic/contrib/gcc/: compiler-flags.txt
xpc_basic/contrib/git/: dot-bashrc-git  dot-gitconfig  notes.txt
xpc_basic/contrib/humor/: evolution.txt
xpc_basic/contrib/m4/: ax_lib_xpc.m4  gwqt.m4  xpc.m4
xpc_basic/contrib/man/: man_sample.1
xpc_basic/contrib/mingw/: mingw32-windows.m4  xpc-mingw32-orig.m4  xpc_mingw32.m4
xpc_basic/contrib/po/: LINGUAS  Makefile.am.fresh  Makevars  POTFILES.in  README  bottom-POTFILES.in  de-sample-po.txt  es-sample-po.txt  top-POTFILES.in  xpc.pot
xpc_basic/contrib/rc/: README  Xdefaults.rc  astyle.rc  bash.rc  cgdb.rc  emacs.rc  fluxbox-keys-vi.rc  fluxbox-keys.rc  gdbinit.rc  indent.pro  input.rc  mctheme-ini.rc  mrxvt.rc  splint.rc  uncrustify.cfg  vimperator.rc  xbindkeys-basic.rc  xbindkeys-ms-arc.rc  xbindkeys-ms-ergo.rc  xbindkeys.MSNatErgo4000.rc  xbindkeys.rc
xpc_basic/contrib/sed/: xpc2ser
xpc_basic/contrib/vim/: _gvimrc  _vimrc  c.vim  cpp.vim  fluxkeys.vim  gvim.rc  print_bw.vim  syncolor.vim  tjp.vim  vim-regexps.txt  vim-tips.txt  vim.rc
xpc_basic/doc/: Makefile.am  README  gnu-po-lifecycle.txt  lifecycle.odg  mingw.txt
xpc_basic/doc/dox/: Makefile.am  doxygen.cfg  make_dox  xpc_automake.dox  xpc_git.dox  xpc_git_subversion_bridge.dox  xpc_license.dox  xpc_mainpage_generic.dox  xpc_mingw.dox  xpc_nice_classes.dox  xpc_philosophy.dox  xpc_subversion.dox  xpc_suite.dox
xpc_basic/doc/dox/debian/: xpc_debian.dox
xpc_basic/doc/dox/debugging/: xpc_coverage_profiling.dox  xpc_debugging.dox
xpc_basic/doc/dox/templates/: doxygen-design.cfg
xpc_basic/doc/dox/xpc/: xpc.dox
xpc_basic/doc/dox/xpc++/: xpc++.dox
xpc_basic/doc/dox/xpccut/: xpccut_introduction.dox
xpc_basic/doc/dox/xpccut++/: xpccutpp_introduction.dox
xpc_basic/doc/dox/xpchello/: xpc_hello.dox  xpc_internationalization.dox  xpc_linkage.dox
xpc_basic/include/: Makefile.am  README
xpc_basic/include/xpc/: Makefile.am  configuration.h  xpc-configuration.h
xpc_basic/m4/: Makefile.am  README
xpc_basic/man/: Makefile.am  README  errorlogging.1  stringmap.1  xpccut++.1  xpccut.1
xpc_basic/pkgconfig/: Makefile.am  README  xpc++-1.1.pc  xpc++-1.1.pc.in  xpc-1.1.pc  xpc-1.1.pc.in  xpccut++-1.1.pc  xpccut++-1.1.pc.in  xpccut-1.1.pc  xpccut-1.1.pc.in
xpc_basic/po/backup/: xpc.pot  xpchello.pot
xpc_basic/safety/: bfunctions  bootstrap-orig  bootstrap-po-orig
xpc_basic/scripts/: bootstrap-po.help  bootstrap.help  build  build.help  dot-gitignore  git_setup  ld_config.sh  version-fix  xpc-bootstrap-po  xpc_boot_functions  xpc_boot_makegnus  xpccut-install
xpc_basic/xpc/: Makefile.am
xpc_basic/xpc++/: Makefile.am
xpc_basic/xpc++/include/: Makefile.am
xpc_basic/xpc++/include/xpc/: Makefile.am  averager.hpp  binstring.hpp  errorlog.hpp  initree.hpp  map_helpers.hpp  rowset.hpp  stringmap.hpp  systemtime.hpp
xpc_basic/xpc++/src/: Makefile.am  averager.cpp  binstring.cpp  errorlog.cpp  initree.cpp  rowset.cpp  stringmap.cpp  systemtime.cpp
xpc_basic/xpc++/tests/: Makefile.am  experiments.cpp  info.cpp  info.hpp  infolist.cpp  infolist.hpp  initree.ini  test_script  xpcpp_unit_test.cpp
xpc_basic/xpc++/w32/: Makefile.am  README  experiments.vcxproj  experiments.vcxproj.filters  libxpcpp.10.sln  libxpcpp.10.vcxproj  libxpcpp.10.vcxproj.filters  xpc-config.h  xpcpp_unit_test.vcxproj  xpcpp_unit_test.vcxproj.filters
xpc_basic/xpc/include/: Makefile.am
xpc_basic/xpc/include/xpc/: Makefile.am  build_versions.h  cpu.h  environment.h  errorlog_macros.h  errorlogging.h  file_functions.h  file_macros.h  gettext_support.h  integers.h  macros.h  nan_inf.h  numerics.h  options.h  os.h  parse_ini.h  portable.h  pthread_attributes.h  pthreader.h  syncher.h  test_settings.h  vsscanf_win.h  xstrings.h  xwinsock.h
xpc_basic/xpc/src/: Makefile.am  build_versions.c  cpu.c  environment.c  errorlogging.c  file_functions.c  gettext_support.c  numerics.c  options.c  os.c  parse_ini.c  portable.c  pthread_attributes.c  pthreader.c  syncher.c  test_settings.c  vsscanf_win.c  xstrings.c
xpc_basic/xpc/tests/: Makefile.am  README  cpu_os_ut.c  dl_leaks.supp  errorlogging_ut.c  gettext_ut.c  make-tests  mylog.txt  numerics_ut.c  options_ut.c  parse_ini_test.ini  parse_ini_test.sav  parse_ini_ut.c  portable_ut.c  syncher_thread_ut.c  test  test_script  xpc_strings_ut.c
xpc_basic/xpc/w32/: Makefile.am  README  errorlogging_ut.7.vcproj  errorlogging_w32.c  libxpc.10.vcxproj  libxpc.10.vcxproj.filters  xpc-config.h  xpc.10.sln
xpc_basic/xpccut/: Makefile.am  README
xpc_basic/xpccut++/: Makefile.am
xpc_basic/xpccut++/include/: Makefile.am
xpc_basic/xpccut++/include/xpc/: Makefile.am  cut.hpp  cut_fuzz.hpp  cut_options.hpp  cut_sequence.hpp  cut_status.hpp
xpc_basic/xpccut++/src/: Makefile.am  cut.cpp  cut_fuzz.cpp  cut_options.cpp  cut_sequence.cpp  cut_status.cpp
xpc_basic/xpccut++/tests/: Makefile.am  cut_unit_test.cpp  test_script
xpc_basic/xpccut++/w32/: README  xpc-config.h
xpc_basic/xpccut/include/: Makefile.am
xpc_basic/xpccut/include/xpc/: Makefile.am  fuzz.h  macros_subset.h  (+4 more)
xpc_basic/xpccut/src/: Makefile.am  fuzz.c  portable_subset.c  unit_test.c  unit_test_options.c  unit_test_status.c
xpc_basic/xpccut/tests/: Makefile.am  README  test  test_script  unit_test_test.c
xpc_basic/xpchello/: Makefile.am  README
xpc_basic/xpchello/include/: Makefile.am
xpc_basic/xpchello/include/xpc/: Makefile.am  tiny_macros.h
xpc_basic/xpchello/src/: Makefile.am  bad-pointers.c  core-dumps.c  hello-main.c  setjmp_exceptions.c
xpc_basic/xpchello/tests/: Makefile.am  README  test_script  xpchello_test.c
