#*****************************************************************************
# Makefile.am (xpc_basic/doc)
#-----------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	XPC
# \author     	Chris Ahlstrom
# \date       	2011-12-26
# \update     	2013-07-25
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This file provides an GNU Autotools makefile for the XPC suite's
#     main ./doc directory.  This directory is the common location where
#     all sub-projects will find the XPC Basic documentation.
#
#-----------------------------------------------------------------------------

#*****************************************************************************
# SUBDIRS
#-----------------------------------------------------------------------------

SUBDIRS = dox

#******************************************************************************
# Makefile.am (xpc_basic/doc)
#------------------------------------------------------------------------------
# Local Variables:
# End:
#------------------------------------------------------------------------------
# vim: ts=3 sw=3 noet ft=automake
#------------------------------------------------------------------------------
