#*****************************************************************************
# Makefile.am (XPC/include)
#-----------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	XPC
# \author     	Chris Ahlstrom
# \date       	2011-12-26
# \update     	2011-12-27
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This file provides an GNU Autotools makefile for the XPC suite's
#     main ./include directory.  This directory is the common location where
#     all sub-projects will find the xpc-config.h module.
#
#-----------------------------------------------------------------------------

#*****************************************************************************
# SUBDIRS
#-----------------------------------------------------------------------------

SUBDIRS = xpc

#******************************************************************************
# Makefile.am (XPC/include)
#------------------------------------------------------------------------------
# Local Variables:
# End:
#------------------------------------------------------------------------------
# vim: ts=3 sw=3 noet ft=automake
#------------------------------------------------------------------------------
